move the plugin and transit data models to DTD-based XML definitions